Feat: 어댑터,데이터클래스 등

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".DetailActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".CardListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
